--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ GEEr es una aplicación que permite obtener estadísticas de evaluación a parti
 						return;
 					}
 					let notaMedia;
-					if (cuentaCalificAlumn > 0)
+					if (cuentaCalificAlum > 0)
 						notaMedia = (sumaCalificAlum/cuentaCalificAlum).toFixed(2);
 					else
 						notaMedia = 0;
