--- a/index.html
+++ b/index.html
@@ -551,6 +551,7 @@ GEEr es una aplicación que permite obtener estadísticas de evaluación a parti
 				case '1LEX2 (FR)': return 'Primera Lengua Extranjera II (Francés)';
 				case 'TMU': return 'Taller de Música';
 				case 'RE (IS)': return 'Religión Islámica';
+			default: return m;
 
     		}
     	}
